--- a/canbe-blog-admin-react/package.json
+++ b/canbe-blog-admin-react/package.json
@@ -19,6 +19,7 @@
     "lodash": "^4.17.21",
     "md-editor-rt": "^6.1.0",
     "mockjs": "^1.1.0",
+    "pubsub-js": "^1.9.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
