--- a/canbe-blog-admin-react/package.json
+++ b/canbe-blog-admin-react/package.json
@@ -25,7 +25,8 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.4",
     "redux": "^5.0.1",
-    "reset-css": "^5.0.2"
+    "reset-css": "^5.0.2",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
